tests/errors/8_uninitialized_errors/no-return.java
class Main {
    static void run() {
        run2();
    }
    static int run2() {
    }
}
